--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
   <link rel="manifest" href="manifest.json">
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = null;
+    const serviceWorkerVersion = "{{ flutter_service_worker_version }}";
   </script>
 
   <!-- This script adds the flutter initialization JS code -->
