--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,7 @@
 </head>
 
 <body>
+  <script> self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;</script>
   <script>
     window.addEventListener('load', function (ev) {
       // Download main.dart.js
