--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <script> self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;</script>
+  <script>self.FIREBASE_APPCHECK_DEBUG_TOKEN = 'A0791EC5-107E-4C90-BF82-34E5FE2EA2DF';</script>
   <script>
     window.addEventListener('load', function (ev) {
       // Download main.dart.js
