--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,25 @@
 </head>
 
 <body>
-  <script>self.FIREBASE_APPCHECK_DEBUG_TOKEN = 'A0791EC5-107E-4C90-BF82-34E5FE2EA2DF';</script>
+  <script>
+    // Funktion zur Unterscheidung zwischen Staging und Produktion
+    function getAppCheckDebugToken() {
+      const currentUrl = window.location.hostname;
+      const isStaging = currentUrl.includes("localhost") || currentUrl.includes("staging");
+
+      // Hier definierst du deine Tokens
+      const stagingToken = "a323d75a-66be-445f-aca5-efdf1a120d3e";
+      const prodToken = "A0791EC5-107E-4C90-BF82-34E5FE2EA2DF";
+
+      // Wenn Staging, gib den Staging-Token zurück, sonst den Prod-Token
+      console.log("TOKEN: ", isStaging ? stagingToken : prodToken);
+      return isStaging ? stagingToken : prodToken;
+    }
+
+    // Setze den AppCheck Debug Token basierend auf der Umgebung
+    self.FIREBASE_APPCHECK_DEBUG_TOKEN = getAppCheckDebugToken();
+    console.log("✅ Aktueller AppCheck Debug Token:", self.FIREBASE_APPCHECK_DEBUG_TOKEN);
+  </script>
   <script>
     window.addEventListener('load', function (ev) {
       // Download main.dart.js
