added wasm support. At the moment it does not work on debug mode.

--- a/web/index.html
+++ b/web/index.html
@@ -2,19 +2,6 @@
 <html>
 
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
@@ -22,7 +9,7 @@
   <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="finanzbegleiter">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
@@ -32,50 +19,25 @@
 
   <title>finanzbegleiter</title>
   <link rel="manifest" href="manifest.json">
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "{{ flutter_service_worker_version }}";
-  </script>
-
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
 </head>
 
 <body>
   <script>
-    // Funktion zur Unterscheidung zwischen Staging und Produktion
+    // AppCheck Token logic
     function getAppCheckDebugToken() {
       const currentUrl = window.location.hostname;
       const isStaging = currentUrl.includes("localhost") || currentUrl.includes("staging");
 
-      // Hier definierst du deine Tokens
       const stagingToken = "a323d75a-66be-445f-aca5-efdf1a120d3e";
       const prodToken = "A0791EC5-107E-4C90-BF82-34E5FE2EA2DF";
 
-      // Wenn Staging, gib den Staging-Token zurück, sonst den Prod-Token
-      console.log("TOKEN: ", isStaging ? stagingToken : prodToken);
       return isStaging ? stagingToken : prodToken;
     }
 
-    // Setze den AppCheck Debug Token basierend auf der Umgebung
     self.FIREBASE_APPCHECK_DEBUG_TOKEN = getAppCheckDebugToken();
     console.log("✅ Aktueller AppCheck Debug Token:", self.FIREBASE_APPCHECK_DEBUG_TOKEN);
   </script>
-  <script>
-    window.addEventListener('load', function (ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine({ useColorEmoji: true }).then(function (appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
-  </script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 
 </html>
